--- a/home/my-style.css
+++ b/home/my-style.css
@@ -12,22 +12,38 @@ html, body {
 }
 
 .container {
-	display: grid;
+	display: flex;
+	flex-direction: column;
 	height: 100%;
 	background-color: rgba(198, 192, 70, 0.35);
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: 50px auto;
-	grid-template-areas: "h h h" "m c c ";
 }
 
 .header {
-	grid-area: h;
 	background-color: rgba(198, 119, 64, 0.35);
 }
 
+.header > div {
+	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.header > div > div{
+	margin: 5px 20px;
+	background-color: rgba(81,81,40,0.35);
+	padding: 2px 20px;
+	align-self: center;
+	width: auto;
+}
+
+.content{
+	display: flex;
+	height: 100%;
+}
+
 .user-detail {
-	grid-area: m;
 	background-color: rgba(35, 186, 198, 0.35);
+	flex: 1;
 }
 
 .user {
@@ -38,7 +54,8 @@ html, body {
 }
 
 .quotes {
-	grid-area: c;
+	flex: 2;
+	order: 2;
 }
 
 .jumbotron {
@@ -49,8 +66,7 @@ html, body {
 }
 
 @media screen and (max-width: 720px) {
-	.container {
-		grid-template-rows: 50px  auto;
-		grid-template-areas: "h h h" "c c c" "m m m";
+	.content {
+		flex-direction: column-reverse;
 	}
 }
