--- a/my-style.css
+++ b/my-style.css
@@ -17,6 +17,10 @@ a {
 	color: #000000;
 }
 
+p {
+	text-align: justify;
+}
+
 /* ----------           header          ---------- */
 .header {
 	grid-area: h;
@@ -55,12 +59,12 @@ a {
 }
 
 .home-user-detail {
-	background-color: rgba(35, 186, 198, 0.35);
+	background-color: rgba(21, 64, 66, 0.19);
 	flex: 1;
 }
 
 .home-user {
-	background-color: aqua;
+	background-color: white;
 	width: 50%;
 	height: 30%;
 	margin: 20px;
@@ -72,7 +76,7 @@ a {
 }
 
 .home-jumbotron {
-	background-color: aqua;
+	background-color: white;
 	width: 70%;
 	height: 70%;
 	margin: 20px;
@@ -80,23 +84,24 @@ a {
 
 /* ----------           second          ---------- */
 .second-container {
-	display               : grid;
-	height                : 100%;
-	grid-template-columns : 10% auto 10%;
-	grid-template-rows    : 1fr auto;
-	grid-template-areas   : "h h h" ". c .";
+	display: grid;
+	height: 100%;
+	grid-template-columns: 10% auto 10%;
+	grid-template-rows: 1fr auto;
+	grid-template-areas: "h h h" ". c .";
 }
 
 .second-content {
 	grid-area: c;
 	padding-top: 20px;
-	background-color: rgba(35, 186, 198, 0.35);
+	padding-bottom: 20px;
+	background-color: rgba(198, 192, 70, 0.35);
 	display: flex;
 	flex-direction: column;
 }
 
 .second-content-item {
-	background-color: rgba(35, 186, 198, 0.35);
+	background-color: rgba(21, 64, 66, 0.19);
 	padding: 10px;
 	width: 90%;
 	margin: 10px auto;
@@ -108,7 +113,48 @@ a {
 
 .second-content-item > p {
 	color: lightslategray;
-	text-align: justify;
+}
+
+/* ----------           second  detail        ---------- */
+.second-detail-container {
+	display: grid;
+	height: 100%;
+	grid-template-columns: 10% auto 10%;
+	grid-template-rows: 1fr auto;
+	grid-template-areas: "h h h" ". c .";
+}
+
+.second-detail-content {
+	grid-area: c;
+	padding: 20px;
+	background-color: rgba(198, 192, 70, 0.35);
+	display: flex;
+	flex-direction: column;
+}
+
+.second-detail-content p {
+	font-size: 21px;
+}
+
+.second-detail-content > h2 {
+	margin-bottom: 0;
+}
+
+.second-detail-big-image {
+	width: 100%;
+	height: auto;
+}
+
+.second-detail-small-image {
+	width: 60%;
+	height: auto;
+	margin: auto;
+}
+
+.second-detail-big-image > img, .second-detail-small-image > img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
 }
 
 /* ----------           720px          ---------- */
@@ -119,6 +165,18 @@ a {
 
 	.second-container {
 		grid-template-columns: 4% auto 4%;
+	}
+
+	.second-detail-container {
+		grid-template-columns: 4% auto 4%;
+	}
+
+	.second-detail-content p {
+		font-size: 18px;
+	}
+
+	.second-detail-small-image {
+		width: 80%;
 	}
 
 	.header > div {
