--- a/my-style.css
+++ b/my-style.css
@@ -1,210 +1,273 @@
 /* ----------           common          ---------- */
 html, body {
-	height: 100%;
-	width: 100%;
-	margin: 0;
-	padding: 0;
+	height  : 100%;
+	width   : 100%;
+	margin  : 0;
+	padding : 0;
 }
 
 .center-children {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	display         : flex;
+	justify-content : center;
+	align-items     : center;
 }
 
 a {
-	text-decoration: none;
-	color: #000000;
+	text-decoration : none;
+	color           : #000000;
+	font-family     : 'Montserrat', sans-serif;
 }
 
 p {
-	text-align: justify;
+	text-align  : justify;
+	font-size   : 21px;
+	font-family : 'Montserrat', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family : 'Montserrat', sans-serif;
 }
 
 /* ----------           header          ---------- */
 .header {
-	grid-area: h;
-	background-color: rgba(198, 119, 64, 0.35);
+	grid-area        : h;
+	background-color : rgba(198, 119, 64, 0.35);
 }
 
 .header > div {
-	height: 100%;
-	display: flex;
-	width: 80%;
-	margin: auto;
+	height  : 100%;
+	display : flex;
+	width   : 80%;
+	margin  : auto;
 }
 
 .header > div > div {
-	margin: 5px 10px 5px 0;
-	padding: 2px 10px 2px 0;
-	align-self: center;
-	width: auto;
+	margin     : 5px 10px 5px 0;
+	padding    : 2px 10px 2px 0;
+	align-self : center;
+	width      : auto;
 }
 
 .brand {
-	font-weight: 700;
+	font-weight : 700;
 }
 
 /* ----------           home          ---------- */
 .home-container {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-	background-color: rgba(198, 192, 70, 0.35);
+	display          : flex;
+	flex-direction   : column;
+	height           : 100%;
+	background-color : rgba(198, 192, 70, 0.35);
 }
 
 .home-content {
-	display: flex;
-	height: 100%;
+	display : flex;
+	height  : 100%;
 }
 
 .home-user-detail {
-	background-color: rgba(21, 64, 66, 0.19);
-	flex: 1;
+	background-color : rgba(21, 64, 66, 0.19);
+	flex             : 1;
 }
 
 .home-user {
-	background-color: white;
-	width: 50%;
-	height: 30%;
-	margin: 20px;
+	background-color : white;
+	width            : 50%;
+	height           : 30%;
+	margin           : 20px;
 }
 
 .home-quotes {
-	flex: 2;
-	order: 2;
+	flex  : 2;
+	order : 2;
 }
 
 .home-jumbotron {
-	background-color: white;
-	width: 70%;
-	height: 70%;
-	margin: 20px;
+	background-color : white;
+	width            : 70%;
+	height           : 70%;
+	margin           : 20px;
 }
 
 /* ----------           second          ---------- */
 .second-container {
-	display: grid;
-	height: 100%;
-	grid-template-columns: 10% auto 10%;
-	grid-template-rows: 1fr auto;
-	grid-template-areas: "h h h" ". c .";
+	display               : grid;
+	height                : 100%;
+	grid-template-columns : 10% auto 10%;
+	grid-template-rows    : 1fr auto;
+	grid-template-areas   : "h h h" ". c .";
 }
 
 .second-content {
-	grid-area: c;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	background-color: rgba(198, 192, 70, 0.35);
-	display: flex;
-	flex-direction: column;
+	grid-area        : c;
+	padding-top      : 20px;
+	padding-bottom   : 20px;
+	background-color : rgba(198, 192, 70, 0.35);
+	display          : flex;
+	flex-direction   : column;
 }
 
 .second-content-item {
-	background-color: rgba(21, 64, 66, 0.19);
-	padding: 10px;
-	width: 90%;
-	margin: 10px auto;
+	background-color : rgba(21, 64, 66, 0.19);
+	padding          : 10px;
+	width            : 90%;
+	margin           : 10px auto;
 }
 
 .second-content-item > h2 {
-	color: black;
+	color : black;
 }
 
 .second-content-item > p {
-	color: lightslategray;
+	color : lightslategray;
 }
 
 /* ----------           second  detail        ---------- */
 .second-detail-container {
-	display: grid;
-	height: 100%;
-	grid-template-columns: 10% auto 10%;
-	grid-template-rows: 1fr auto;
-	grid-template-areas: "h h h" ". c .";
+	display               : grid;
+	height                : 100%;
+	grid-template-columns : 10% auto 10%;
+	grid-template-rows    : 1fr auto;
+	grid-template-areas   : "h h h" ". c .";
 }
 
 .second-detail-content {
-	grid-area: c;
-	padding: 20px;
-	background-color: rgba(198, 192, 70, 0.35);
-	display: flex;
-	flex-direction: column;
-}
-
-.second-detail-content p {
-	font-size: 21px;
+	grid-area        : c;
+	padding          : 20px;
+	background-color : rgba(198, 192, 70, 0.35);
+	display          : flex;
+	flex-direction   : column;
 }
 
 .second-detail-content > h2 {
-	margin-bottom: 0;
+	margin-bottom : 0;
 }
 
 .second-detail-big-image {
-	width: 100%;
-	height: auto;
+	width  : 100%;
+	height : auto;
 }
 
 .second-detail-small-image {
-	width: 60%;
-	height: auto;
-	margin: auto;
+	width  : 60%;
+	height : auto;
+	margin : auto;
 }
 
 .second-detail-big-image > img, .second-detail-small-image > img {
-	width: 100%;
-	height: 100%;
-	object-fit: contain;
+	width      : 100%;
+	height     : 100%;
+	object-fit : contain;
+}
+
+/* ----------           third          ---------- */
+.third-container {
+	display               : grid;
+	height                : 100%;
+	grid-template-columns : 10% auto 10%;
+	grid-template-rows    : 1fr auto;
+	grid-template-areas   : "h h h" ". c .";
+}
+
+.third-content {
+	grid-area        : c;
+	padding-top      : 20px;
+	padding-bottom   : 20px;
+	background-color : rgba(198, 192, 70, 0.35);
+	display          : flex;
+	flex-direction   : column;
+}
+
+.third-content-item {
+	background-color : rgba(21, 64, 66, 0.19);
+	width            : 90%;
+	margin           : 10px auto;
+	display          : flex;
+	justify-content  : space-between;
+}
+
+.third-content-item-img {
+	flex        : 1 1 30%;
+	padding     : 10px;
+	display     : flex;
+	align-items : center;
+}
+
+.third-content-item-img > img {
+	max-width  : 100%;
+	object-fit : contain;
+}
+
+.third-content-item-content {
+	flex    : 1 1 70%;
+	padding : 10px;
+}
+
+.third-content-item-content > h2 {
+	color      : black;
+	text-align : center;
+}
+
+.third-content-item p {
+	color : lightslategray;
 }
 
 /* ----------           720px          ---------- */
-@media screen and (max-width: 720px) {
+@media screen and (max-width : 720px) {
 	.home-content {
-		flex-direction: column-reverse;
+		flex-direction : column-reverse;
 	}
 
 	.second-container {
-		grid-template-columns: 4% auto 4%;
+		grid-template-columns : 4% auto 4%;
 	}
 
 	.second-detail-container {
-		grid-template-columns: 4% auto 4%;
+		grid-template-columns : 4% auto 4%;
 	}
 
-	.second-detail-content p {
-		font-size: 18px;
+	.third-container {
+		grid-template-columns : 4% auto 4%;
+	}
+
+	p {
+		font-size : 18px;
 	}
 
 	.second-detail-small-image {
-		width: 80%;
+		width : 80%;
 	}
 
 	.header > div {
-		width: 92%;
+		width : 92%;
 	}
 }
 
 /* ----------           600px          ---------- */
-@media screen and (max-width: 600px) {
+@media screen and (max-width : 600px) {
 	.header > div {
-		flex-wrap: wrap;
+		flex-wrap : wrap;
 	}
 
 	.header > div > div {
-		margin-right: 0;
-		margin-left: 0;
-		padding-right: 0;
-		padding-left: 0;
-		flex: 1 1 33%;
-		text-align: center;
+		margin-right  : 0;
+		margin-left   : 0;
+		padding-right : 0;
+		padding-left  : 0;
+		flex          : 1 1 33%;
+		text-align    : center;
 	}
 
 	.header > div > div:first-child {
-		flex: 1 1 100%;
+		flex : 1 1 100%;
 	}
 
 	.brand {
-		font-size: large;
+		font-size : large;
+	}
+
+	.third-content-item {
+		flex-direction : column;
 	}
 
 }
